feat: add meta content to portfolio and 404 pages, add formsubmit.html to show a succes message when submiting a form

--- a/formsubmit.html
+++ b/formsubmit.html
@@ -43,8 +43,8 @@
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/common.css" />
     <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/submit.css" />
     <link rel="stylesheet" href="styles/footer.css" />
-    <link rel="stylesheet" href="styles/404.css" />
   </head>
   <body class="bg--body">
     <!-- Navigation Menu -->
@@ -80,37 +80,16 @@
     </header>
     <!-- End Navigation Menu -->
 
-    <!-- Error  -->
-    <section class="error-page">
-      <div class="not-found">
-        <h1>404 - PÁGINA NO ENCONTRADA</h1>
-        <p>
-          Hemos enviado un murloc de rescate para guiarte de regreso a un lugar
-          seguro.
-        </p>
-        <a href="/index.html">
-          <button class="btn">Mmmrrgmgrrrgmmll!</button>
-        </a>
+    <!-- Message -->
+    <section class="message">
+      <div class="message__content">
+        <h2>Mensaje enviado con éxito</h2>
       </div>
-      <video
-        class="background-video"
-        autoplay=""
-        muted=""
-        loop=""
-        poster="https://bnetcmsus-a.akamaihd.net/cms/gallery/yw/YWFDIDFNTB4K1496179710633.jpg"
-        bp="sm+"
-      >
-        <source
-          src="https://bnetcmsus-a.akamaihd.net/cms/gallery/c6/C6KLQ8BWWSKR1496179646097.webm"
-          type="video/webm"
-        />
-        <source
-          src="https://bnetcmsus-a.akamaihd.net/cms/gallery/kr/KRYSJPOOWXX51496179560105.mp4"
-          type="video/mp4"
-        />
-      </video>
+      <button class="btn back--btn">
+        <a href="/index.html">Volver a la Página Principal</a>
+      </button>
     </section>
-    <!-- End Error  -->
+    <!-- End Message -->
 
     <!-- Footer -->
     <footer class="footer bg--gradient">
