--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <!-- Contact -->
     <section id="contact" class="contact">
       <h2 class="contact__title">Contacta Conmigo</h2>
-      <form class="form" method="post" action="/">
+      <form class="form" method="post" action="formsubmit.html">
         <div class="form__element">
           <label class="form__label" for="name">Nombre</label>
           <input
