--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="jadero.dev" />
+    <meta property="og:description" content=" J.Alberto Delgado Portfolio" />
+    <meta
+      property="og:image"
+      content="https://www.jadero.dev/assets/images/main/background-logo.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,25 +19,25 @@
       rel="icon"
       type="image/ico"
       sizes="16x16"
-      href="/assets/icons/faviconV2.ico"
+      href="./assets/icons/faviconV2.ico"
     />
     <link
       rel="icon"
       type="image/ico"
       sizes="32x32"
-      href="/assets/icons/faviconV2.ico"
+      href="./assets/icons/faviconV2.ico"
     />
     <link
       rel="icon"
       type="image/ico"
       sizes="48x48"
-      href="/assets/icons/faviconV2.ico"
+      href="./assets/icons/faviconV2.ico"
     />
     <link
       rel="icon"
       type="image/ico"
       sizes="64x64"
-      href="/assets/icons/faviconV2.ico"
+      href="./assets/icons/faviconV2.ico"
     />
     <title>Portfolio JADR</title>
     <link rel="stylesheet" href="styles/normalize.css" />
