fix: fixed regexp pattern in githubtag

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             type="text"
             name="github"
             id="github-tag"
-            pattern="^@[^/s]"
+            pattern="^@[^\s]+"
             placeholder="Formato @<username>"
           />
         </div>
