style: restyled projects buttons

--- a/portfolio.html
+++ b/portfolio.html
@@ -130,14 +130,14 @@
               href="https://github.com/JoseAlbDR/js-quiz"
               target="_blank"
               rel="noopener noreferrer"
-              >Github</a
+              ><img src="./assets/icons/github.svg" alt="github" />Github</a
             >
             <a
               class="btn"
               href="https://jsquiz.jadelgadorobles.com"
               target="_blank"
               rel="noopener noreferrer"
-              >Live</a
+              >🌐 Live</a
             >
           </div>
         </div>
@@ -174,14 +174,14 @@
               href="https://github.com/JoseAlbDR/worldwise"
               target="_blank"
               rel="noopener noreferrer"
-              >Github</a
+              ><img src="./assets/icons/github.svg" alt="github" />Github</a
             >
             <a
               class="btn"
               href="https://jadr-worldwide.netlify.app"
               target="_blank"
               rel="noopener noreferrer"
-              >Live</a
+              >🌐 Live</a
             >
           </div>
         </div>
@@ -212,21 +212,21 @@
               href="https://github.com/JoseAlbDR/js-quiz-Api"
               target="_blank"
               rel="noopener noreferrer"
-              >Github</a
+              ><img src="./assets/icons/github.svg" alt="github" />Github</a
             >
             <a
               class="btn"
               href="https://jsquiz.jadero.dev/api/v1/questions"
               target="_blank"
               rel="noopener noreferrer"
-              >Live</a
+              >🌐 Live</a
             >
             <a
               class="btn"
               href="https://jsquiz.jadero.dev/api/v1/docs"
               target="_blank"
               rel="noopener noreferrer"
-              >Docs</a
+              >📖 Docs</a
             >
           </div>
         </div>
@@ -264,14 +264,14 @@
               href="https://github.com/JoseAlbDR/forkify"
               target="_blank"
               rel="noopener noreferrer"
-              >Github</a
+              ><img src="./assets/icons/github.svg" alt="github" />Github</a
             >
             <a
               class="btn"
               href="https://forkify-jadr.netlify.app/"
               target="_blank"
               rel="noopener noreferrer"
-              >Live</a
+              >🌐 Live</a
             >
           </div>
         </div>
@@ -305,14 +305,14 @@
               href="https://github.com/JoseAlbDR/simongame"
               target="_blank"
               rel="noopener noreferrer"
-              >Github</a
+              ><img src="./assets/icons/github.svg" alt="github" />Github</a
             >
             <a
               class="btn"
               href="https://jadr-simon.netlify.app"
               target="_blank"
               rel="noopener noreferrer"
-              >Live</a
+              >🌐 Live</a
             >
           </div>
         </div>
@@ -346,14 +346,14 @@
               href="https://github.com/JoseAlbDR/forkify"
               target="_blank"
               rel="noopener noreferrer"
-              >Github</a
+              ><img src="./assets/icons/github.svg" alt="github" />Github</a
             >
             <a
               class="btn"
               href="https://forkify-jadr.netlify.app"
               target="_blank"
               rel="noopener noreferrer"
-              >Live</a
+              >🌐 Live</a
             >
           </div>
         </div>
