feat: Inicio not redirect to index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </label>
         <ul class="header__nav__list">
           <li class="header__nav__list__item hover-underline-animation">
-            <a href="#">Inicio</a>
+            <a href="index.html">Inicio</a>
           </li>
           <li class="header__nav__list__item hover-underline-animation">
             <a href="#about">About</a>
