--- a/404.html
+++ b/404.html
@@ -61,7 +61,7 @@
         </label>
         <ul class="header__nav__list">
           <li class="header__nav__list__item hover-underline-animation">
-            <a href="#">Inicio</a>
+            <a href="index.html">Inicio</a>
           </li>
           <li class="header__nav__list__item hover-underline-animation">
             <a href="#about">About</a>
