style: change sections margins

--- a/404.html
+++ b/404.html
@@ -80,37 +80,41 @@
     </header>
     <!-- End Navigation Menu -->
 
-    <!-- Error  -->
-    <section class="error-page">
-      <div class="not-found">
-        <h1>404 - PÁGINA NO ENCONTRADA</h1>
-        <p>
-          Hemos enviado un murloc de rescate para guiarte de regreso a un lugar
-          seguro.
-        </p>
-        <a href="/index.html">
-          <button class="btn">Mmmrrgmgrrrgmmll!</button>
-        </a>
-      </div>
-      <video
-        class="background-video"
-        autoplay=""
-        muted=""
-        loop=""
-        poster="https://bnetcmsus-a.akamaihd.net/cms/gallery/yw/YWFDIDFNTB4K1496179710633.jpg"
-        bp="sm+"
-      >
-        <source
-          src="https://bnetcmsus-a.akamaihd.net/cms/gallery/c6/C6KLQ8BWWSKR1496179646097.webm"
-          type="video/webm"
-        />
-        <source
-          src="https://bnetcmsus-a.akamaihd.net/cms/gallery/kr/KRYSJPOOWXX51496179560105.mp4"
-          type="video/mp4"
-        />
-      </video>
-    </section>
-    <!-- End Error  -->
+    <!-- Main Content -->
+    <main>
+      <!-- Error  -->
+      <section class="error-page">
+        <div class="not-found">
+          <h1>404 - PÁGINA NO ENCONTRADA</h1>
+          <p>
+            Hemos enviado un murloc de rescate para guiarte de regreso a un
+            lugar seguro.
+          </p>
+          <a href="/index.html">
+            <button class="btn">Mmmrrgmgrrrgmmll!</button>
+          </a>
+        </div>
+        <video
+          class="background-video"
+          autoplay=""
+          muted=""
+          loop=""
+          poster="https://bnetcmsus-a.akamaihd.net/cms/gallery/yw/YWFDIDFNTB4K1496179710633.jpg"
+          bp="sm+"
+        >
+          <source
+            src="https://bnetcmsus-a.akamaihd.net/cms/gallery/c6/C6KLQ8BWWSKR1496179646097.webm"
+            type="video/webm"
+          />
+          <source
+            src="https://bnetcmsus-a.akamaihd.net/cms/gallery/kr/KRYSJPOOWXX51496179560105.mp4"
+            type="video/mp4"
+          />
+        </video>
+      </section>
+      <!-- End Error  -->
+    </main>
+    <!-- End Main Content -->
 
     <!-- Footer -->
     <footer class="footer bg--gradient">
