--- a/formsubmit.html
+++ b/formsubmit.html
@@ -80,16 +80,20 @@
     </header>
     <!-- End Navigation Menu -->
 
-    <!-- Message -->
-    <section class="message">
-      <div class="message__content">
-        <h2>Mensaje enviado con éxito</h2>
-      </div>
-      <button class="btn back--btn">
-        <a href="/index.html">Volver a la Página Principal</a>
-      </button>
-    </section>
-    <!-- End Message -->
+    <!-- Main Content -->
+    <main>
+      <!-- Message -->
+      <section class="message">
+        <div class="message__content">
+          <h2>Mensaje enviado con éxito</h2>
+        </div>
+        <button class="btn back--btn">
+          <a href="/index.html">Volver a la Página Principal</a>
+        </button>
+      </section>
+      <!-- End Message -->
+    </main>
+    <!-- End Main Content -->
 
     <!-- Footer -->
     <footer class="footer bg--gradient">
