--- a/index.html
+++ b/index.html
@@ -83,230 +83,236 @@
     </header>
     <!-- End Navigation Menu -->
 
-    <!-- Banner -->
-    <section class="banner">
-      <div class="bg--fixed"></div>
-      <div class="banner__info">
-        <h1>Portfolio J.Alberto Delgado</h1>
-      </div>
-    </section>
-    <!-- End Banner -->
+    <!-- Main Content -->
+    <main>
+      <!-- Banner -->
+      <section class="banner">
+        <div class="bg--fixed"></div>
+        <div class="banner__info">
+          <h1>Portfolio J.Alberto Delgado</h1>
+        </div>
+      </section>
+      <!-- End Banner -->
 
-    <!-- About -->
-    <section id="about" class="about">
-      <div class="about__content">
-        <h2 class="about__content__title">
-          nunca es tarde para descubrir tu pasión
-        </h2>
-        <p>
-          ¡Hola! Soy J. Alberto Delgado, un estudiante principiante de
-          desarrollo web. Mi pasión es resolver problemas a través de la
-          programación.
-        </p>
-        <p>
-          Actualmente, me encuentro en un bootcamp de desarrollo web full stack,
-          ampliando mis habilidades en front-end y back-end. Mi meta es crecer
-          como profesional en el desarrollo web y aportar mi conocimiento a
-          proyectos futuros.
-        </p>
-      </div>
-      <div class="about__image">
-        <img src="./assets/images/main/about-img.jpg" alt="about img" />
-      </div>
-    </section>
-    <!-- End About -->
+      <!-- About -->
+      <section id="about" class="about">
+        <div class="about__content">
+          <h2 class="about__content__title">
+            nunca es tarde para descubrir tu pasión
+          </h2>
+          <p>
+            ¡Hola! Soy J. Alberto Delgado, un estudiante principiante de
+            desarrollo web. Mi pasión es resolver problemas a través de la
+            programación.
+          </p>
+          <p>
+            Actualmente, me encuentro en un bootcamp de desarrollo web full
+            stack, ampliando mis habilidades en front-end y back-end. Mi meta es
+            crecer como profesional en el desarrollo web y aportar mi
+            conocimiento a proyectos futuros.
+          </p>
+        </div>
+        <div class="about__image">
+          <img src="./assets/images/main/about-img.jpg" alt="about img" />
+        </div>
+      </section>
+      <!-- End About -->
 
-    <!-- Skills -->
-    <section id="skills" class="skills">
-      <div class="bg--fixed"></div>
-      <div class="skills__container">
-        <h2 class="skills__title">Mis skills</h2>
-        <ul class="skills__list">
-          <li class="skills__item">
-            <img src="./assets/images/skills/html.svg" alt="html" />
-            <div class="progress--container">
-              <div class="progress progress--html">
-                <div class="progress--bar"></div>
+      <!-- Skills -->
+      <section id="skills" class="skills">
+        <div class="bg--fixed"></div>
+        <div class="skills__container">
+          <h2 class="skills__title">Mis skills</h2>
+          <ul class="skills__list">
+            <li class="skills__item">
+              <img src="./assets/images/skills/html.svg" alt="html" />
+              <div class="progress--container">
+                <div class="progress progress--html">
+                  <div class="progress--bar"></div>
+                </div>
               </div>
-            </div>
-          </li>
-          <li class="skills__item">
-            <img src="./assets/images/skills/css.svg" alt="css" />
-            <div class="progress--container">
-              <div class="progress progress--css">
-                <div class="progress--bar"></div>
+            </li>
+            <li class="skills__item">
+              <img src="./assets/images/skills/css.svg" alt="css" />
+              <div class="progress--container">
+                <div class="progress progress--css">
+                  <div class="progress--bar"></div>
+                </div>
               </div>
-            </div>
-          </li>
-          <li class="skills__item">
-            <img src="./assets/images/skills/js.svg" alt="javascript" />
-            <div class="progress--container">
-              <div class="progress progress--js">
-                <div class="progress--bar"></div>
+            </li>
+            <li class="skills__item">
+              <img src="./assets/images/skills/js.svg" alt="javascript" />
+              <div class="progress--container">
+                <div class="progress progress--js">
+                  <div class="progress--bar"></div>
+                </div>
               </div>
-            </div>
-          </li>
-          <li class="skills__item">
-            <img src="./assets/images/skills/ts.svg" alt="typescript" />
-            <div class="progress--container">
-              <div class="progress progress--ts">
-                <div class="progress--bar"></div>
+            </li>
+            <li class="skills__item">
+              <img src="./assets/images/skills/ts.svg" alt="typescript" />
+              <div class="progress--container">
+                <div class="progress progress--ts">
+                  <div class="progress--bar"></div>
+                </div>
               </div>
-            </div>
-          </li>
-          <li class="skills__item">
-            <img src="./assets/images/skills/react.svg" alt="react" />
-            <div class="progress--container">
-              <div class="progress progress--react">
-                <div class="progress--bar"></div>
+            </li>
+            <li class="skills__item">
+              <img src="./assets/images/skills/react.svg" alt="react" />
+              <div class="progress--container">
+                <div class="progress progress--react">
+                  <div class="progress--bar"></div>
+                </div>
               </div>
-            </div>
-          </li>
-          <li class="skills__item">
-            <img src="./assets/images/skills/node.svg" alt="node" />
-            <div class="progress--container">
-              <div class="progress progress--node">
-                <div class="progress--bar"></div>
+            </li>
+            <li class="skills__item">
+              <img src="./assets/images/skills/node.svg" alt="node" />
+              <div class="progress--container">
+                <div class="progress progress--node">
+                  <div class="progress--bar"></div>
+                </div>
               </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <!-- End Skills -->
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- End Skills -->
 
-    <!-- Contact -->
-    <section id="contact" class="contact">
-      <h2 class="contact__title">Contacta Conmigo</h2>
-      <form class="form" method="post" action="formsubmit.html">
-        <div class="form__element">
-          <label class="form__label" for="name">Nombre</label>
-          <input
-            class="form__input"
-            type="text"
-            name="name"
-            id="name"
-            placeholder="Tu Nombre"
-            required
-          />
-        </div>
-        <div class="form__element">
-          <label class="form__label" for="lastName">Apellidos</label>
-          <input
-            class="form__input"
-            type="text"
-            name="lastName"
-            id="lastName"
-            placeholder="Tus Apellidos"
-            required
-          />
-        </div>
-        <div class="form__element">
-          <label class="form__label" for="phone">Teléfono (XXX-XXX-XXX)</label>
-          <input
-            class="form__input"
-            type="tel"
-            name="phone"
-            id="phone"
-            pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}"
-            placeholder="Tu teléfono (666-666-666)"
-            required
-          />
-        </div>
-        <div class="form__element">
-          <label class="form__label" for="github-tag"
-            >Tag Github (@usuario)</label
-          >
-          <input
-            class="form__input"
-            type="text"
-            name="github"
-            id="github-tag"
-            pattern="^@[^\s]+"
-            placeholder="Formato @usuario"
-          />
-        </div>
-        <div class="form__element known">
-          <label class="form__label">¿Dónde me conociste?</label>
-          <div class="form--radio">
+      <!-- Contact -->
+      <section id="contact" class="contact">
+        <h2 class="contact__title">Contacta Conmigo</h2>
+        <form class="form" method="post" action="formsubmit.html">
+          <div class="form__element">
+            <label class="form__label" for="name">Nombre</label>
             <input
               class="form__input"
-              type="radio"
-              name="where"
-              id="university"
-              value="uni"
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Tu Nombre"
               required
+            />
+          </div>
+          <div class="form__element">
+            <label class="form__label" for="lastName">Apellidos</label>
+            <input
+              class="form__input"
+              type="text"
+              name="lastName"
+              id="lastName"
+              placeholder="Tus Apellidos"
+              required
+            />
+          </div>
+          <div class="form__element">
+            <label class="form__label" for="phone"
+              >Teléfono (XXX-XXX-XXX)</label
+            >
+            <input
+              class="form__input"
+              type="tel"
+              name="phone"
+              id="phone"
+              pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}"
+              placeholder="Tu teléfono (666-666-666)"
+              required
+            />
+          </div>
+          <div class="form__element">
+            <label class="form__label" for="github-tag"
+              >Tag Github (@usuario)</label
+            >
+            <input
+              class="form__input"
+              type="text"
+              name="github"
+              id="github-tag"
+              pattern="^@[^\s]+"
+              placeholder="Formato @usuario"
+            />
+          </div>
+          <div class="form__element known">
+            <label class="form__label">¿Dónde me conociste?</label>
+            <div class="form--radio">
+              <input
+                class="form__input"
+                type="radio"
+                name="where"
+                id="university"
+                value="uni"
+                required
+                checked
+              />
+              <label class="form__label--radio" for="university"
+                >Universidad</label
+              >
+            </div>
+            <div class="form--radio">
+              <input
+                class="form__input"
+                type="radio"
+                name="where"
+                id="keepcoding"
+                value="kc"
+                required
+              />
+              <label class="form__label--radio" for="keepcoding"
+                >Keepcoding kick-off</label
+              >
+            </div>
+            <div class="form--radio">
+              <input
+                class="form__input"
+                type="radio"
+                name="where"
+                id="school"
+                value="sc"
+                required
+              />
+              <label class="form__label--radio" for="school">Colegio</label>
+            </div>
+            <div class="form--radio">
+              <input
+                class="form__input"
+                type="radio"
+                name="where"
+                id="github"
+                value="gh"
+              />
+              <label class="form__label--radio" for="github">En Github</label>
+            </div>
+          </div>
+          <div class="form__element more--info">
+            <label class="form__label" for="moreinfo">Más información</label>
+            <textarea
+              class="form__input"
+              name="moreinfo"
+              id="moreinfo"
+              maxlength="180"
+              placeholder="Cuéntame algo más"
+              required
+            ></textarea>
+          </div>
+          <div class="form__element form__element--checkbox">
+            <input
+              class="form__input"
+              type="checkbox"
+              name="news"
+              id="news"
               checked
             />
-            <label class="form__label--radio" for="university"
-              >Universidad</label
+            <label class="form__label" for="news"
+              >Subscribirme a la Newsletter</label
             >
           </div>
-          <div class="form--radio">
-            <input
-              class="form__input"
-              type="radio"
-              name="where"
-              id="keepcoding"
-              value="kc"
-              required
-            />
-            <label class="form__label--radio" for="keepcoding"
-              >Keepcoding kick-off</label
-            >
+          <div>
+            <button type="submit" class="btn">Enviar</button>
+            <button type="reset" class="btn btn--secondary">Cancelar</button>
           </div>
-          <div class="form--radio">
-            <input
-              class="form__input"
-              type="radio"
-              name="where"
-              id="school"
-              value="sc"
-              required
-            />
-            <label class="form__label--radio" for="school">Colegio</label>
-          </div>
-          <div class="form--radio">
-            <input
-              class="form__input"
-              type="radio"
-              name="where"
-              id="github"
-              value="gh"
-            />
-            <label class="form__label--radio" for="github">En Github</label>
-          </div>
-        </div>
-        <div class="form__element more--info">
-          <label class="form__label" for="moreinfo">Más información</label>
-          <textarea
-            class="form__input"
-            name="moreinfo"
-            id="moreinfo"
-            maxlength="180"
-            placeholder="Cuéntame algo más"
-            required
-          ></textarea>
-        </div>
-        <div class="form__element form__element--checkbox">
-          <input
-            class="form__input"
-            type="checkbox"
-            name="news"
-            id="news"
-            checked
-          />
-          <label class="form__label" for="news"
-            >Subscribirme a la Newsletter</label
-          >
-        </div>
-        <div>
-          <button type="submit" class="btn">Enviar</button>
-          <button type="reset" class="btn btn--secondary">Cancelar</button>
-        </div>
-      </form>
-    </section>
-    <!-- End Contact -->
+        </form>
+      </section>
+      <!-- End Contact -->
+    </main>
+    <!-- End Main Content -->
 
     <!-- Footer -->
     <footer class="footer bg--gradient">
@@ -333,5 +339,7 @@
       </div>
     </footer>
     <!-- End Footer -->
+
+    <a href="#" class="top">Back to Top &#8593;</a>
   </body>
 </html>
