--- a/index.html
+++ b/index.html
@@ -339,7 +339,6 @@
       </div>
     </footer>
     <!-- End Footer -->
-
-    <a href="#" class="top">Back to Top &#8593;</a>
+    <a href="#" class="top">&#8593;</a>
   </body>
 </html>
