fix: add bug fix to the remaining pages

--- a/formsubmit.html
+++ b/formsubmit.html
@@ -46,79 +46,85 @@
     <link rel="stylesheet" href="styles/submit.css" />
     <link rel="stylesheet" href="styles/footer.css" />
   </head>
-  <body class="bg--body">
-    <!-- Navigation Menu -->
-    <header class="header bg--gradient">
-      <nav class="header__nav">
-        <div class="header__nav__logo">
-          <a href="/index.html"
-            ><img src="./assets/svg/logo.svg" alt="logo"
-          /></a>
-        </div>
-        <input id="header__nav--toggle" type="checkbox" />
-        <label class="header__nav--button--container" for="header__nav--toggle">
-          <div class="header__nav--button"></div>
-        </label>
-        <ul class="header__nav__list">
-          <li class="header__nav__list__item hover-underline-animation">
-            <a href="index.html">Inicio</a>
-          </li>
-          <li class="header__nav__list__item hover-underline-animation">
-            <a href="#about">About</a>
-          </li>
-          <li class="header__nav__list__item hover-underline-animation">
-            <a href="#skills">Skills</a>
-          </li>
-          <li class="header__nav__list__item hover-underline-animation">
-            <a href="#contact">Contacto</a>
-          </li>
-          <li class="header__nav__list__item hover-underline-animation">
-            <a href="./portfolio.html">Portfolio</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <!-- End Navigation Menu -->
-
-    <!-- Main Content -->
-    <main>
-      <!-- Message -->
-      <section class="message">
-        <div class="message__content">
-          <h2>Mensaje enviado con éxito</h2>
-        </div>
-        <button class="btn back--btn">
-          <a href="/index.html">Volver a la Página Principal</a>
-        </button>
-      </section>
-      <!-- End Message -->
-    </main>
-    <!-- End Main Content -->
-
-    <!-- Footer -->
-    <footer class="footer bg--gradient">
-      <div class="footer--container">
-        <div class="footer__social">
-          <ul class="footer__social__icons">
-            <li>
-              <a
-                href="https://www.linkedin.com/in/jalbertodelgado"
-                target="_blank"
-                ><img src="./assets/icons/linkedin.svg" alt="linkedin"
-              /></a>
+  <body>
+    <div class="bg--body"></div>
+    <div class="content">
+      <!-- Navigation Menu -->
+      <header class="header bg--gradient">
+        <nav class="header__nav">
+          <div class="header__nav__logo">
+            <a href="/index.html"
+              ><img src="./assets/svg/logo.svg" alt="logo"
+            /></a>
+          </div>
+          <input id="header__nav--toggle" type="checkbox" />
+          <label
+            class="header__nav--button--container"
+            for="header__nav--toggle"
+          >
+            <div class="header__nav--button"></div>
+          </label>
+          <ul class="header__nav__list">
+            <li class="header__nav__list__item hover-underline-animation">
+              <a href="index.html">Inicio</a>
             </li>
-            <li>
-              <a href="https://github.com/JoseAlbDR" target="_blank"
-                ><img src="./assets/icons/github.svg" alt="github"
-              /></a>
+            <li class="header__nav__list__item hover-underline-animation">
+              <a href="#about">About</a>
+            </li>
+            <li class="header__nav__list__item hover-underline-animation">
+              <a href="#skills">Skills</a>
+            </li>
+            <li class="header__nav__list__item hover-underline-animation">
+              <a href="#contact">Contacto</a>
+            </li>
+            <li class="header__nav__list__item hover-underline-animation">
+              <a href="./portfolio.html">Portfolio</a>
             </li>
           </ul>
+        </nav>
+      </header>
+      <!-- End Navigation Menu -->
+
+      <!-- Main Content -->
+      <main>
+        <!-- Message -->
+        <section class="message">
+          <div class="message__content">
+            <h2>Mensaje enviado con éxito</h2>
+          </div>
+          <button class="btn back--btn">
+            <a href="/index.html">Volver a la Página Principal</a>
+          </button>
+        </section>
+        <!-- End Message -->
+      </main>
+      <!-- End Main Content -->
+
+      <!-- Footer -->
+      <footer class="footer bg--gradient">
+        <div class="footer--container">
+          <div class="footer__social">
+            <ul class="footer__social__icons">
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/jalbertodelgado"
+                  target="_blank"
+                  ><img src="./assets/icons/linkedin.svg" alt="linkedin"
+                /></a>
+              </li>
+              <li>
+                <a href="https://github.com/JoseAlbDR" target="_blank"
+                  ><img src="./assets/icons/github.svg" alt="github"
+                /></a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__copy">
+            <p>&copy;J.Alberto Delgado</p>
+          </div>
         </div>
-        <div class="footer__copy">
-          <p>&copy;J.Alberto Delgado</p>
-        </div>
-      </div>
-    </footer>
-    <!-- End Footer -->
+      </footer>
+      <!-- End Footer -->
+    </div>
   </body>
 </html>
