--- a/404.html
+++ b/404.html
@@ -46,100 +46,106 @@
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="styles/404.css" />
   </head>
-  <body class="bg--body">
-    <!-- Navigation Menu -->
-    <header class="header bg--gradient">
-      <nav class="header__nav">
-        <div class="header__nav__logo">
-          <a href="/index.html"
-            ><img src="./assets/svg/logo.svg" alt="logo"
-          /></a>
-        </div>
-        <input id="header__nav--toggle" type="checkbox" />
-        <label class="header__nav--button--container" for="header__nav--toggle">
-          <div class="header__nav--button"></div>
-        </label>
-        <ul class="header__nav__list">
-          <li class="header__nav__list__item hover-underline-animation">
-            <a href="index.html">Inicio</a>
-          </li>
-          <li class="header__nav__list__item hover-underline-animation">
-            <a href="#about">About</a>
-          </li>
-          <li class="header__nav__list__item hover-underline-animation">
-            <a href="#skills">Skills</a>
-          </li>
-          <li class="header__nav__list__item hover-underline-animation">
-            <a href="#contact">Contacto</a>
-          </li>
-          <li class="header__nav__list__item hover-underline-animation">
-            <a href="./portfolio.html">Portfolio</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <!-- End Navigation Menu -->
-
-    <!-- Main Content -->
-    <main>
-      <!-- Error  -->
-      <section class="error-page">
-        <div class="not-found">
-          <h1>404 - PÁGINA NO ENCONTRADA</h1>
-          <p>
-            Hemos enviado un murloc de rescate para guiarte de regreso a un
-            lugar seguro.
-          </p>
-          <a href="/index.html">
-            <button class="btn">Mmmrrgmgrrrgmmll!</button>
-          </a>
-        </div>
-        <video
-          class="background-video"
-          autoplay=""
-          muted=""
-          loop=""
-          poster="https://bnetcmsus-a.akamaihd.net/cms/gallery/yw/YWFDIDFNTB4K1496179710633.jpg"
-          bp="sm+"
-        >
-          <source
-            src="https://bnetcmsus-a.akamaihd.net/cms/gallery/c6/C6KLQ8BWWSKR1496179646097.webm"
-            type="video/webm"
-          />
-          <source
-            src="https://bnetcmsus-a.akamaihd.net/cms/gallery/kr/KRYSJPOOWXX51496179560105.mp4"
-            type="video/mp4"
-          />
-        </video>
-      </section>
-      <!-- End Error  -->
-    </main>
-    <!-- End Main Content -->
-
-    <!-- Footer -->
-    <footer class="footer bg--gradient">
-      <div class="footer--container">
-        <div class="footer__social">
-          <ul class="footer__social__icons">
-            <li>
-              <a
-                href="https://www.linkedin.com/in/jalbertodelgado"
-                target="_blank"
-                ><img src="./assets/icons/linkedin.svg" alt="linkedin"
-              /></a>
+  <body>
+    <div class="bg--body"></div>
+    <div class="content">
+      <!-- Navigation Menu -->
+      <header class="header bg--gradient">
+        <nav class="header__nav">
+          <div class="header__nav__logo">
+            <a href="/index.html"
+              ><img src="./assets/svg/logo.svg" alt="logo"
+            /></a>
+          </div>
+          <input id="header__nav--toggle" type="checkbox" />
+          <label
+            class="header__nav--button--container"
+            for="header__nav--toggle"
+          >
+            <div class="header__nav--button"></div>
+          </label>
+          <ul class="header__nav__list">
+            <li class="header__nav__list__item hover-underline-animation">
+              <a href="index.html">Inicio</a>
             </li>
-            <li>
-              <a href="https://github.com/JoseAlbDR" target="_blank"
-                ><img src="./assets/icons/github.svg" alt="github"
-              /></a>
+            <li class="header__nav__list__item hover-underline-animation">
+              <a href="#about">About</a>
+            </li>
+            <li class="header__nav__list__item hover-underline-animation">
+              <a href="#skills">Skills</a>
+            </li>
+            <li class="header__nav__list__item hover-underline-animation">
+              <a href="#contact">Contacto</a>
+            </li>
+            <li class="header__nav__list__item hover-underline-animation">
+              <a href="./portfolio.html">Portfolio</a>
             </li>
           </ul>
+        </nav>
+      </header>
+      <!-- End Navigation Menu -->
+
+      <!-- Main Content -->
+      <main>
+        <!-- Error  -->
+        <section class="error-page">
+          <div class="not-found">
+            <h1>404 - PÁGINA NO ENCONTRADA</h1>
+            <p>
+              Hemos enviado un murloc de rescate para guiarte de regreso a un
+              lugar seguro.
+            </p>
+            <a href="/index.html">
+              <button class="btn">Mmmrrgmgrrrgmmll!</button>
+            </a>
+          </div>
+          <video
+            class="background-video"
+            autoplay=""
+            muted=""
+            loop=""
+            poster="https://bnetcmsus-a.akamaihd.net/cms/gallery/yw/YWFDIDFNTB4K1496179710633.jpg"
+            bp="sm+"
+          >
+            <source
+              src="https://bnetcmsus-a.akamaihd.net/cms/gallery/c6/C6KLQ8BWWSKR1496179646097.webm"
+              type="video/webm"
+            />
+            <source
+              src="https://bnetcmsus-a.akamaihd.net/cms/gallery/kr/KRYSJPOOWXX51496179560105.mp4"
+              type="video/mp4"
+            />
+          </video>
+        </section>
+        <!-- End Error  -->
+      </main>
+      <!-- End Main Content -->
+
+      <!-- Footer -->
+      <footer class="footer bg--gradient">
+        <div class="footer--container">
+          <div class="footer__social">
+            <ul class="footer__social__icons">
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/jalbertodelgado"
+                  target="_blank"
+                  ><img src="./assets/icons/linkedin.svg" alt="linkedin"
+                /></a>
+              </li>
+              <li>
+                <a href="https://github.com/JoseAlbDR" target="_blank"
+                  ><img src="./assets/icons/github.svg" alt="github"
+                /></a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__copy">
+            <p>&copy;J.Alberto Delgado</p>
+          </div>
         </div>
-        <div class="footer__copy">
-          <p>&copy;J.Alberto Delgado</p>
-        </div>
-      </div>
-    </footer>
-    <!-- End Footer -->
+      </footer>
+      <!-- End Footer -->
+    </div>
   </body>
 </html>
