--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <!-- End About -->
 
         <!-- Skills -->
-        <section id="skills" class="skills">
+        <section id="skills" class="skills bg--fixed">
           <div class="skills__container">
             <h2 class="skills__title">Mis skills</h2>
             <ul class="skills__list">
