feat: add title to video section

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,12 +90,12 @@
       <main>
         <!-- Video -->
         <section class="video">
+          <h2>Demo Video</h2>
           <video
             src="./assets/videos/portfolio.mp4"
             muted
             loop
             autoplay
-            controls
           ></video>
         </section>
         <!-- End Video -->
