fix: change github and live links for usepopcorn project

--- a/portfolio.html
+++ b/portfolio.html
@@ -274,14 +274,14 @@
               <div class="project__links">
                 <a
                   class="btn"
-                  href="https://github.com/JoseAlbDR/forkify"
+                  href="https://github.com/JoseAlbDR/usepopcorn-react"
                   target="_blank"
                   rel="noopener noreferrer"
                   ><img src="./assets/icons/github.svg" alt="github" />Github</a
                 >
                 <a
                   class="btn"
-                  href="https://forkify-jadr.netlify.app/"
+                  href="https://usepopcorn.jadero.dev/"
                   target="_blank"
                   rel="noopener noreferrer"
                   >🌐 Live</a
